# gnome-devel-docs

./: Makefile  README.md  gnome-devel-docs-3.7.90-logos-removal.patch  gnome-devel-docs.spec
src/: COPYING  Makefile.am  Makefile.in  NEWS  aclocal.m4  configure  configure.ac
src/accessibility-devel-guide/: Makefile.am  Makefile.in
src/accessibility-devel-guide/C/: gad.xml
src/accessibility-devel-guide/cs/: cs.po  index.docbook
src/accessibility-devel-guide/de/: de.po  index.docbook
src/accessibility-devel-guide/el/: el.po  index.docbook
src/accessibility-devel-guide/es/: es.po  index.docbook
src/accessibility-devel-guide/fr/: fr.po  index.docbook
src/accessibility-devel-guide/ja/: index.docbook
src/accessibility-devel-guide/ko/: index.docbook  ko.po
src/accessibility-devel-guide/pt_BR/: index.docbook  pt_BR.po
src/accessibility-devel-guide/sl/: index.docbook
src/accessibility-devel-guide/zh_CN/: index.docbook
src/gdp-handbook/: Makefile.in
src/gdp-style-guide/: Makefile.in
src/hig/: Makefile.am  Makefile.in
src/hig/C/: action-bars.page  application-basics.page  application-menus.page  button-menus.page  buttons.page  check-boxes.page  compatibility.page  design-principles.page  dialogs.page  display-compatibility.page  drop-down-lists.page  empty-placeholders.page  essentials.page  grids.page  header-bar-menus.page  header-bars.page  icons-and-artwork.page  in-app-notifications.page  index.page  info-bars.page  keyboard-input.page  legal.xml  lists.page  menu-bars.page  menus.page  notifications.page  overlaid-controls.page  patterns.page  pointer-and-touch-input.page  popovers.page  primary-windows.page  progress-bars.page  progress-spinners.page  radio-buttons.page  search.page  selection-mode.page  sidebar-lists.page  sliders.page  spin-boxes.page  switches.page  (+8 more)
src/hig/cs/: action-bars.page  application-basics.page  application-menus.page  button-menus.page  buttons.page  check-boxes.page  compatibility.page  cs.po  design-principles.page  dialogs.page  display-compatibility.page  drop-down-lists.page  empty-placeholders.page  grids.page  header-bar-menus.page  header-bars.page  icons-and-artwork.page  in-app-notifications.page  index.page  info-bars.page  keyboard-input.page  legal.xml  lists.page  menu-bars.page  menus.page  notifications.page  overlaid-controls.page  patterns.page  pointer-and-touch-input.page  popovers.page  primary-windows.page  progress-bars.page  progress-spinners.page  radio-buttons.page  search.page  selection-mode.page  sidebar-lists.page  sliders.page  spin-boxes.page  switches.page  (+8 more)
src/hig/de/: action-bars.page  application-basics.page  application-menus.page  button-menus.page  buttons.page  check-boxes.page  compatibility.page  de.po  design-principles.page  dialogs.page  display-compatibility.page  drop-down-lists.page  empty-placeholders.page  essentials.page  grids.page  header-bar-menus.page  header-bars.page  hig-ch-bibliography.xml  hig-ch-checks.xml  hig-ch-controls.xml  hig-ch-credits.xml  hig-ch-desktop.xml  hig-ch-feedback.xml  hig-ch-gnome3.xml  hig-ch-icons-new.xml  hig-ch-icons.xml  hig-ch-input.xml  hig-ch-intro.xml  hig-ch-language.xml  hig-ch-layout.xml  hig-ch-menus.xml  hig-ch-principles.xml  hig-ch-toolbars.xml  hig-ch-whatsnew.xml  hig-ch-windows.xml  icons-and-artwork.page  in-app-notifications.page  index.docbook  index.page  info-bars.page  (+28 more)
src/hig/el/: action-bars.page  application-basics.page  application-menus.page  button-menus.page  buttons.page  check-boxes.page  compatibility.page  design-principles.page  dialogs.page  display-compatibility.page  drop-down-lists.page  el.po  empty-placeholders.page  essentials.page  grids.page  header-bar-menus.page  header-bars.page  hig-ch-bibliography.xml  hig-ch-checks.xml  hig-ch-controls.xml  hig-ch-credits.xml  hig-ch-desktop.xml  hig-ch-feedback.xml  hig-ch-gnome3.xml  hig-ch-icons-new.xml  hig-ch-icons.xml  hig-ch-input.xml  hig-ch-intro.xml  hig-ch-language.xml  hig-ch-layout.xml  hig-ch-menus.xml  hig-ch-principles.xml  hig-ch-toolbars.xml  hig-ch-whatsnew.xml  hig-ch-windows.xml  icons-and-artwork.page  in-app-notifications.page  index.docbook  index.page  info-bars.page  (+28 more)
src/hig/es/: action-bars.page  application-basics.page  application-menus.page  button-menus.page  buttons.page  check-boxes.page  compatibility.page  design-principles.page  dialogs.page  display-compatibility.page  drop-down-lists.page  empty-placeholders.page  es.po  essentials.page  grids.page  header-bar-menus.page  header-bars.page  hig-ch-bibliography.xml  hig-ch-checks.xml  hig-ch-controls.xml  hig-ch-credits.xml  hig-ch-desktop.xml  hig-ch-feedback.xml  hig-ch-gnome3.xml  hig-ch-icons-new.xml  hig-ch-icons.xml  (+42 more)
src/integration-guide/: Makefile.in
src/optimization-guide/: Makefile.am  Makefile.in
src/platform-demos/: Makefile.am  Makefile.in
src/platform-overview/: Makefile.am  Makefile.in
src/programming-guidelines/: Makefile.am  Makefile.in
(+3889 files in other folders)
