@YELP_HELP_RULES@

HELP_ID = hig

HELP_FILES = \
	legal.xml \
	action-bars.page \
	application-basics.page \
	application-menus.page \
	button-menus.page \
	buttons.page \
	check-boxes.page \
	compatibility.page \
	design-principles.page \
	dialogs.page \
	drop-down-lists.page \
	essentials.page \
	grids.page \
	header-bar-menus.page \
	header-bars.page \
	icons-and-artwork.page \
	index.page \
	keyboard-input.page \
	lists.page \
	menu-bars.page \
	menus.page \
	notifications.page \
	patterns.page \
	pointer-and-touch-input.page \
	popovers.page \
	primary-windows.page \
	progress-bars.page \
	progress-spinners.page \
	radio-buttons.page \
	search.page \
	selection-mode.page \
	sidebar-lists.page \
	sliders.page \
	spin-boxes.page \
	switches.page \
	tabs.page \
	text-fields.page \
	toolbars.page \
	typography.page \
	ui-elements.page \
	view-switchers.page \
	visual-layout.page \
	writing-style.page

HELP_MEDIA = \
	figures/hig.png \
	figures/label-alignment.svg \
	figures/visual-alignment-correct.svg \
	figures/visual-alignment-incorrect.svg \
	figures/visual-alignment-spacing.svg \
	figures/icons/inverting.svg \
	figures/icons/sizes.png \
	figures/icons/sizes-small-24.png \
	figures/icons/palette/aluminium1.svg \
	figures/icons/palette/aluminium2.svg \
	figures/icons/palette/butter.svg \
	figures/icons/palette/chameleon.svg \
	figures/icons/palette/chocolate.svg \
	figures/icons/palette/orange.svg \
	figures/icons/palette/plum.svg \
	figures/icons/palette/scarlet-red.svg \
	figures/icons/palette/sky-blue.svg \
        figures/patterns/action-bar.svg \
        figures/patterns/action-dialog.svg \
        figures/patterns/application-menu.svg \
        figures/patterns/editable-lists.svg \
        figures/patterns/grid.svg \
        figures/patterns/header-bar.svg \
        figures/patterns/header-bar-menu.svg \
        figures/patterns/list-styles.svg \
        figures/patterns/message-dialog.svg \
        figures/patterns/patterns.svg \
        figures/patterns/presentation-dialog.svg \
        figures/patterns/primary-windows.svg \
        figures/patterns/search.svg \
        figures/patterns/selection-mode.svg \
        figures/patterns/sidebar-list.svg \
        figures/patterns/view-switcher.svg \
	figures/touch/flick.svg \
	figures/touch/pinch-or-stretch.svg \
	figures/touch/tap-and-hold.svg \
	figures/touch/3-finger-hold-and-tap.svg \
	figures/touch/tap.svg \
	figures/touch/double-tap.svg \
	figures/touch/3-finger-pinch.svg \
	figures/touch/drag.svg \
	figures/touch/edge-drag.svg \
	figures/touch/4-finger-drag.svg \
	figures/ui-elements/sliders.svg \
	figures/ui-elements/hybrid-button-menu.svg \
	figures/ui-elements/popover.svg \
	figures/ui-elements/toolbar.svg \
	figures/ui-elements/menu.svg \
	figures/ui-elements/progress-bars.svg \
	figures/ui-elements/buttons.svg \
	figures/ui-elements/check-boxes.svg \
	figures/ui-elements/text-fields.svg \
	figures/ui-elements/radio-buttons.svg \
	figures/ui-elements/drop-down-list-custom-values.svg \
	figures/ui-elements/tabs.svg \
	figures/ui-elements/button-menu.svg \
	figures/ui-elements/menu-bar.svg \
	figures/ui-elements/switches.svg \
	figures/ui-elements/progress-spinner.svg \
	figures/ui-elements/spin-boxes.svg \
	figures/ui-elements/drop-down-list.svg

HELP_LINGUAS = de el es ru
