@YELP_HELP_RULES@

HELP_ID = programming-guidelines

HELP_EXTRA = \
	example-docs.xml \
	$(NULL)

HELP_FILES = \
	additional-materials.page \
	api-stability.page \
	c-coding-style.page \
	cc-by-sa-3-0.xml \
	databases.page \
	documentation.page \
	file-system.page \
	gerror.page \
	glist.page \
	index.page \
	introspection.page \
	logging.page \
	main-contexts.page \
	memory-management.page \
	namespacing.page \
	parallel-installability.page \
	preconditions.page \
	threading.page \
	tooling.page \
	unit-testing.page \
	version-control.page \
	versioning.page \
	writing-good-code.page \
	$(NULL)

HELP_LINGUAS = cs de es ko
